<resources>
    <string name="app_name">GetTaxi_Android_Project</string>
    <string name="newRide">נסיעה חדשה</string>
    <string name="name">שם</string>
    <string name="email">כתובת Email</string>
    <string name="phoneNumber">מספר טלפון</string>
    <string name="currentLocation">מיקום נוכחי</string>
    <string name="travelDestination">יעד נסיעה</string>
    <string name="inviteTaxi">הזמן מונית</string>
    <string name="IAmPassenger">אני נוסע</string>
    <string name="IAmDriver">אני נהג</string>
    <string name="Login">התחברות</string>
    <string name="UserName">שם משתמש</string>
    <string name="Password">סיסמא</string>
    <string name="ToLogin">התחבר</string>
    <string name="signUp">הירשם</string>
    <string name="registration">הרשמה</string>
    <string name="firstName">שם פרטי</string>
    <string name="lastName">שם משפחה</string>
    <string name="idNumber">מספר תעודת זהות</string>
    <string name="creditNumber">מספר אשראי</string>
    <string name="passwordIsIncorrect">הסיסמא שגויה</string>
    <string name="userDoesNotExist">המתשמש לא קיים</string>


</resources>
