<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBackGround"
    tools:context=".controller.SignUp">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TextView
            android:text="@string/registration"
            style="@style/Title"/>

        <TextView
            style="@style/BeforeEditTextTitle"
            android:text="@string/idNumber"/>
        <EditText
            android:id="@+id/idNumberEditText"
            android:inputType="number"
            style="@style/EditTextStyle_Height35sp"
            android:drawableLeft="@drawable/ic_id_30dp"/>

        <TextView
        style="@style/BeforeEditTextTitle"
        android:text="@string/name"/>
        <EditText
            android:id="@+id/nameEditText"
            style="@style/EditTextStyle_Height35sp"
            android:drawableLeft="@drawable/ic_person_black_30dp"/>

        <TextView
            style="@style/BeforeEditTextTitle"
            android:text="@string/phoneNumber"/>
        <EditText
            android:id="@+id/phoneNumberEditText"
            android:inputType="phone"
            style="@style/EditTextStyle_Height35sp"
            android:drawableLeft="@drawable/ic_phone_black_30dp"/>
        <TextView
            style="@style/BeforeEditTextTitle"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/emailEditText"
            android:inputType="textEmailAddress"
            style="@style/EditTextStyle_Height35sp"
            android:drawableLeft="@drawable/ic_email_black_30dp"/>

        <TextView
            style="@style/BeforeEditTextTitle"
            android:text="@string/creditNumber"/>
        <EditText
            android:id="@+id/creditNumberEditText"
            android:inputType="number"
            style="@style/EditTextStyle_Height35sp"
            android:drawableLeft="@drawable/ic_credit_card_black_30dp"/>
        <TextView
            style="@style/BeforeEditTextTitle"
            android:text="@string/Password"/>
        <EditText
            android:id="@+id/passwordEditText"
            style="@style/EditTextStyle_Height35sp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_key_black_30dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center">

            <Button
                android:id="@+id/signUpBtnOfRegistration"
                style="@style/Btn3"
                android:text="@string/signUp"
                android:onClick="signUpOnClick"
                />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>

