<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBackGround"

    tools:context=".controller.DriverAuthentication">
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp">


        <TextView
            android:text="@string/Login"
            style="@style/Title"/>

        <TextView
            style="@style/BeforeEditTextTitle"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/UserNameEditText"
            style="@style/EditTextStyle_Height42sp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email_black_30dp"/>
        <TextView
            style="@style/BeforeEditTextTitle"
            android:text="@string/Password"/>
        <EditText
            android:id="@+id/PasswordEditText"
            android:inputType="textPassword"
            style="@style/EditTextStyle_Height42sp"
            android:drawableLeft="@drawable/ic_key_black_30dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical"
            android:gravity="right"
            >

            <Button
                android:id="@+id/loginBtn"
                style="@style/Btn2"
                android:layout_marginTop="10sp"
                android:text="@string/ToLogin"
                android:gravity="center"
                />
            <Button
                android:id="@+id/signUpBtnOfAuthentication"
                style="@style/Btn2"
                android:layout_marginTop="10sp"
                android:text="@string/signUp"
                android:gravity="center"
                android:onClick="toSignUpActivity"
                />
        </LinearLayout>


</LinearLayout>


</android.support.constraint.ConstraintLayout>